server/ingress/test/odoo/odoo-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: example-tls
  namespace: ingress-nginx
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVxRENDQTVDZ0F3SUJBZ0lVT29uMUJvY0EyZnp2VUs0RHNJVE8waDEyeWowd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZc3hDekFKQmdOVkJBWVRBbFZUTVJrd0Z3WURWUVFLRXhCRGJHOTFaRVpzWVhKbExDQkpibU11TVRRdwpNZ1lEVlFRTEV5dERiRzkxWkVac1lYSmxJRTl5YVdkcGJpQlRVMHdnUTJWeWRHbG1hV05oZEdVZ1FYVjBhRzl5CmFYUjVNUll3RkFZRFZRUUhFdzFUWVc0Z1JuSmhibU5wYzJOdk1STXdFUVlEVlFRSUV3cERZV3hwWm05eWJtbGgKTUI0WERUSTBNVEF4TWpFek5UWXdNRm9YRFRNNU1UQXdPVEV6TlRZd01Gb3dZakVaTUJjR0ExVUVDaE1RUTJ4dgpkV1JHYkdGeVpTd2dTV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRFBVVG5xMHRnejQ2eTIKTXFlY0JuSHlGTVV1SzBINjlpNTBwZ2t0RFFNTklhZGlQMVFxVXF0eE9Sd25mZ3p1WURyRUZtUGZlMmI2TUNvTQpzbElzcllOR1dLM0g1TEFNbXFFMzJRUTc2N01wTDZtWFhnaEhYK205VVlteWdaRGRDdTFMR2c2NDlMQWVoM3hyCmZhb3VmSEUvZTg4WkhJOHQ1NHVRZVJBa2tHNnJRR0xOSTdjand1ckZqRUxMYndnVVU0TURTaUsxMlhsRUFzM3QKOEpoSWZGTDJ4dFlvd2NDckErMHdvV3pwTzlKUk9JZ0FHTEdDVlhoOGZ1MlFkR2M0bmNyUXczckhZaEU3QW5uRgpzZjVhdVczUjBLZVZTU [...]
type: kubernetes.io/tls
